--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ h1 {
 }
 
 button {
-  font-family: "Outfit", sans-serif !important;
+  font-family: 'Outfit', sans-serif !important;
   font-optical-sizing: auto !important;
   font-weight: 500 !important;
   font-style: normal !important;
