--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,9 @@ h1 {
 }
 
 .text-body {
-  font: outfit;
+  font-family: 'Outfit', sans-serif !important;
+  font-weight: 500 !important;
+  font-style: normal !important;
 }
 
 button {
