--- a/src/index.css
+++ b/src/index.css
@@ -39,11 +39,13 @@ h1 {
 }
 
 .text-body {
-  font: outfit;
+  font-family: 'Outfit', sans-serif !important;
+  font-weight: 500 !important;
+  font-style: normal !important;
 }
 
 button {
-  font-family: "Outfit", sans-serif !important;
+  font-family: 'Outfit', sans-serif !important;
   font-optical-sizing: auto !important;
   font-weight: 500 !important;
   font-style: normal !important;
