Added posthog, theme, progress bar, and help tour #4

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,9 @@ p {
   font-size: 40px !important;
 }
 
+.ant-tour {
+  max-width: 100vw !important;
+}
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
