--- a/src/index.css
+++ b/src/index.css
@@ -60,17 +60,6 @@ p {
   font-size: 40px !important;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
+.ant-tour {
+  max-width: 100vw !important;
 }
